crates/air_r_parser/tests/snapshots/error/parenthesized_expression/multiple.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
(
  a
  b
)
```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RBogusExpression {
            items: [
                L_PAREN@0..1 "(" [] [],
                RIdentifier {
                    name_token: IDENT@1..5 "a" [Newline("\n"), Whitespace("  ")] [],
                },
            ],
        },
        RIdentifier {
            name_token: IDENT@5..9 "b" [Newline("\n"), Whitespace("  ")] [],
        },
        RBogusExpression {
            items: [
                R_PAREN@9..11 ")" [Newline("\n")] [],
            ],
        },
    ],
    eof_token: EOF@11..11 "" [] [],
}
```

## CST

```
0: R_ROOT@0..11
  0: (empty)
  1: R_EXPRESSION_LIST@0..11
    0: R_BOGUS_EXPRESSION@0..5
      0: L_PAREN@0..1 "(" [] []
      1: R_IDENTIFIER@1..5
        0: IDENT@1..5 "a" [Newline("\n"), Whitespace("  ")] []
    1: R_IDENTIFIER@5..9
      0: IDENT@5..9 "b" [Newline("\n"), Whitespace("  ")] []
    2: R_BOGUS_EXPRESSION@9..11
      0: R_PAREN@9..11 ")" [Newline("\n")] []
  2: EOF@11..11 "" [] []

```

## Errors

```
Failed to parse due to syntax errors.
```
